# tree-sitter-ucode

./: CHANGELOG.md  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
bindings/c/: tree-sitter-ucode.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_ucode/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterUcode/: ucode.h
bindings/swift/TreeSitterUcodeTests/: TreeSitterUcodeTests.swift
examples/: 01-data-types-variables.uc  02-operators.uc  05-builtin-functions.uc  06-arrays-objects.uc  07-modules-imports.uc  README.md  network-management.uc  system-monitor.uc  web-api.uc
queries/: highlights.scm  injections.scm  tags.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: destructuring.txt  expressions.txt  semicolon_insertion.txt  statements.txt
test/highlight/: injection.uc  keywords.uc
test/tags/: functions.uc
